feat: Add system settings for license management
Introduces a new section within system settings for license management. This includes fields for viewing license status, machine ID, expiry date, and limits like concurrent agents and voice channels. It also adds functionality to activate a new license key.

Includes translations for English, French, and Arabic.

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -83,6 +83,31 @@
     "noScript": "هذه الحملة ليس لديها نص مرتبط.",
     "scriptWillBeHere": "سيتم عرض النص هنا."
   },
+  "systemSettings": {
+    "tabs": {
+      "appearance": "المظهر",
+      "email": "البريد الإلكتروني (SMTP)",
+      "licenses": "التراخيص"
+    },
+    "licenses": {
+      "title": "إدارة الترخيص",
+      "subtitle": "عرض حالة الترخيص الخاص بك وتنشيط مفتاح جديد.",
+      "statusTitle": "الحالة الحالية",
+      "machineId": "بصمة الجهاز",
+      "licenseStatus": "حالة الترخيص",
+      "trialPeriod": "فترة تجريبية",
+      "valid": "صالح",
+      "expired": "منتهي الصلاحية",
+      "expiryDate": "تاريخ انتهاء الصلاحية",
+      "limitsTitle": "حدود الترخيص",
+      "concurrentAgents": "الوكلاء المتزامنين",
+      "voiceChannels": "قنوات الصوت",
+      "activateTitle": "تفعيل ترخيص",
+      "keyPlaceholder": "الصق مفتاح الترخيص الخاص بك هنا...",
+      "activateButton": "تفعيل الترخيص",
+      "activationSimulation": "محاكاة: سيتم التحقق من صحة الترخيص وتفعيله هنا."
+    }
+  },
   "features": {
     "users": {
       "title": "المستخدمون",
@@ -156,15 +181,13 @@
       "title": "اللغات",
       "description": "إدارة اللغات المتاحة في التطبيق.",
       "userJourney": {
-        "title": "رحلة المستخدم: تغيير لغة الواجهة",
+        "title": "إدارة اللغة",
         "steps": [
-          "ينقر المستخدم على محدد اللغة في الرأس.",
-          "يختار 'العربية' من القائمة المنسدلة.",
-          "تتم ترجمة الواجهة بأكملها على الفور إلى اللغة العربية."
+          "لتغيير لغة الواجهة، استخدم محدد اللغة الموجود في الرأس في أعلى يمين الشاشة."
         ]
       },
       "simplificationTip": {
-        "title": "نصيحة",
+        "title": "معلومة",
         "content": "هذه الوحدة هي عنصر نائب. تتم إدارة اللغة النشطة عبر المحدد في الرأس للوصول السريع."
       }
     },
