--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -121,8 +121,7 @@
       "id": "ID",
       "loginId": "Login ID / Ext.",
       "role": "Role",
-      "status": "Status",
-      "actions": "Actions"
+      "status": "Status"
     },
     "modal": {
       "addTitle": "Add a new user",
@@ -132,18 +131,13 @@
         "groups": "Assigned Groups",
         "campaigns": "Assigned Campaigns"
       },
-      "firstName": "First Name",
-      "lastName": "Last Name",
       "loginId": "Login ID / Extension",
       "loginIdHelp": "Must be a unique number of 4 to 6 digits.",
-      "email": "Email",
       "mobileNumber": "Mobile Number (for \"Connect to Phone\")",
       "useMobileAsStation": "Use mobile as workstation",
       "useMobileAsStationHelp": "If active, calls will be sent to this mobile number.",
-      "password": "Password",
       "passwordHelp": "Leave blank to keep unchanged",
       "generate": "Generate",
-      "role": "Role",
       "site": "Assigned Site",
       "noSite": "No site",
       "activeUser": "Active User",
@@ -162,21 +156,9 @@
       "lastAdmin": "Cannot delete the last administrator."
     }
   },
-  "groupManager": {
-    "title": "Agent Groups",
-    "createGroup": "Create Group",
-    "searchPlaceholder": "Search by group name...",
-    "headers": {
-      "name": "Group Name",
-      "members": "Member Count"
-    },
-    "noGroups": "No groups created.",
+    "groupManager": {
     "modal": {
-      "editTitle": "Edit Group",
-      "addTitle": "New Group",
-      "name": "Group name",
-      "members": "Group Members (Agents)",
-      "noAgents": "No active agents available."
+        "noAgents": "No active agents available."
     }
   },
   "outboundCampaignsManager": {
@@ -188,8 +170,7 @@
       "status": "Status",
       "mode": "Mode",
       "contacts": "Contacts",
-      "remaining": "Remaining",
-      "actions": "Actions"
+      "remaining": "Remaining"
     },
     "import": "Import",
     "deleteDisabledTooltip": "Deactivate the campaign to delete it.",
@@ -204,8 +185,6 @@
         "quotas": "Quotas",
         "filters": "Inclusion/Exclusion"
       },
-      "name": "Name",
-      "description": "Description",
       "agentScript": "Agent Script",
       "noScript": "No script",
       "qualifGroup": "Qualification Group",
@@ -227,8 +206,7 @@
     "searchPlaceholder": "Search by script name or ID...",
     "headers": {
       "id": "ID",
-      "name": "Script Name",
-      "actions": "Actions"
+      "name": "Script Name"
     },
     "noScripts": "No scripts match your search or no scripts have been created."
   },
@@ -238,8 +216,7 @@
     "searchPlaceholder": "Search by flow name or ID...",
     "headers": {
       "id": "ID",
-      "name": "Flow Name",
-      "actions": "Actions"
+      "name": "Flow Name"
     },
     "noFlows": "No IVR flows match your search or no flows have been created."
   },
@@ -332,17 +309,107 @@
     "saving": "Saving..."
   },
   "features": {
+    "users": {
+      "title": "Users",
+      "description": "Manage user accounts, their roles, and permissions."
+    },
+    "groups": {
+      "title": "Groups",
+      "description": "Create agent groups for simplified management and routing."
+    },
+    "planning": {
+      "title": "Schedules",
+      "description": "Manage weekly agent schedules and their various activities."
+    },
+    "outbound": {
+      "title": "Outbound Campaigns",
+      "description": "Create and manage outbound calling campaigns with advanced dialing strategies."
+    },
+    "scripts": {
+      "title": "Agent Scripts",
+      "description": "Build interactive call guides for your agents with a visual editor."
+    },
+    "ivr": {
+      "title": "IVR Flows",
+      "description": "Design complex inbound call flows with a graphical designer."
+    },
+    "audio": {
+      "title": "Media Library",
+      "description": "Import and manage audio prompts for IVRs and music on hold."
+    },
+    "records": {
+      "title": "Recordings",
+      "description": "Listen to, download, and archive call recordings for quality and compliance."
+    },
+    "qualifications": {
+      "title": "Call Qualifications",
+      "description": "Define call ending statuses for reporting and retry strategies."
+    },
+    "supervision": {
+      "title": "Real-Time Supervision",
+      "description": "View your contact center's activity live and interact with agents."
+    },
+    "reporting": {
+      "title": "Reports & Analytics",
+      "description": "Explore historical data, create custom reports, and export results."
+    },
+    "history": {
+      "title": "Call History",
+      "description": "Consult, filter, and search the detailed log of all inbound and outbound calls."
+    },
+    "sessions": {
+      "title": "Agent Login/Logout",
+      "description": "Consult the detailed log of agent connections, disconnections, and work times."
+    },
+    "trunks": {
+      "title": "SIP Trunks",
+      "description": "Connect your telephone operators for inbound and outbound calls."
+    },
+    "dids": {
+      "title": "Numbers (DIDs)",
+      "description": "Manage your incoming phone numbers and their initial routing."
+    },
+    "sites-config": {
+      "title": "Site Configuration",
+      "description": "Manage different physical sites for outbound call routing."
+    },
+    "module-settings": {
+      "title": "Module Management",
+      "description": "Enable or disable menus for administrator and supervisor roles."
+    },
     "languages": {
-        "userJourney": {
-            "title": "Language Management",
-            "steps": [
-                "The user changes the language via the selector in the header for an instantly translated experience."
-            ]
-        },
-        "simplificationTip": {
-            "title": "Information",
-            "content": "This module is a placeholder. Language management is done via the selector in the header for quick access."
-        }
+      "title": "Languages",
+      "description": "Manage the available languages in the application.",
+      "userJourney": {
+        "title": "Language Management",
+        "steps": [
+          "The user changes the language via the selector in the header for an instantly translated experience."
+        ]
+      },
+      "simplificationTip": {
+        "title": "Information",
+        "content": "This module is a placeholder. Language management is done via the selector in the header for quick access."
+      }
+    },
+    "database-client": {
+      "title": "Database",
+      "description": "Execute SQL queries directly on the database for debugging and advanced reporting."
+    },
+    "system-connection": {
+      "title": "System Connection",
+      "description": "Configure connections to the database and the Asterisk telephony server."
+    },
+    "api-docs": {
+      "title": "API Docs",
+      "description": "Consult the complete API documentation for integration and development."
+    },
+    "billing": {
+      "title": "Billing",
+      "description": "Manage subscriptions and view billing history."
+    },
+    "system-settings": {
+      "title": "System",
+      "description": "Configure low-level system settings, such as email sending."
     }
   }
 }
