feat: Add direct agent contact functionality
Introduces a new feature allowing supervisors to send direct messages to agents, separate from the "raise hand" response mechanism. This involves:

- A new `handleContactAgent` handler in `App.tsx`.
- Passing the `onContactAgent` prop down to `SupervisionDashboard` and `AgentBoard`.
- Adding an "envelope" icon and a contact input field to the `AgentBoard` for each agent.
- Updating the WebSocket server to correctly include the sender's name in messages.
- Adding new translations for this feature.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -244,6 +244,20 @@
       "agentsOnWrapup": "Agents on Wrap-up",
       "agentsOnPause": "Agents on Pause",
       "activeCalls": "Active Calls"
+    },
+    "agentBoard": {
+      "headers": {
+        "agent": "Agent",
+        "status": "Status",
+        "duration": "Duration",
+        "calls": "Calls",
+        "avgHandleTime": "AHT",
+        "actions": "Actions"
+      },
+      "actions": {
+        "contact": "Message for {agentName}:"
+      },
+      "noAgents": "No agents connected at the moment."
     }
   },
   "systemSettings": {
