feat(agent): Improve call action buttons and translation
Refactor the agent view to use translated strings for call action buttons. This makes the "End Call" and "Qualify Contact" buttons dynamically change based on the agent's status and available translations.

Also, update i18n files to include new translations for KPIs and agent states.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -92,7 +92,9 @@
     "nextCall": "Next Call",
     "searching": "Searching...",
     "callControls": "Call Controls",
+    "call": "Call",
     "endCall": "End Call",
+    "qualifyContact": "Qualify Contact",
     "hold": "Hold",
     "transfer": "Transfer",
     "qualifications": "Qualifications",
@@ -108,7 +110,13 @@
     "noCallbacks": "No callbacks for this day.",
     "supervisorResponse": "Supervisor's Response",
     "messages": "Messages",
-    "clearAll": "Clear all"
+    "clearAll": "Clear all",
+    "kpis": "Today's KPIs",
+    "callsHandled": "Calls Handled",
+    "pauseCount": "Pause Count",
+    "totalPauseTime": "Total Pause Time",
+    "pause": "Pause",
+    "ready": "Ready"
   },
   "userManager": {
     "title": "Users",
