feat: Internationalize agent statuses and campaign form defaults
This commit introduces internationalization for agent status labels, making the application more adaptable to different languages. It also sets default values for the outbound campaign form, improving the user experience by pre-filling common settings.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -116,7 +116,17 @@
     "pauseCount": "Pause Count",
     "totalPauseTime": "Total Pause Time",
     "pause": "Pause",
-    "ready": "Ready"
+    "ready": "Ready",
+    "statuses": {
+      "waiting": "Waiting",
+      "onCall": "On Call",
+      "wrapUp": "Wrap-up",
+      "onPause": "On Pause",
+      "ringing": "Ringing",
+      "disconnected": "Disconnected",
+      "onHold": "On Hold"
+    },
+    "callNumber": "Call {phoneName}"
   },
   "userManager": {
     "title": "Users",
