feat: Add 'Training' agent status
Introduces a new 'Formation' (Training) status for agents. This change updates the AgentStatus type, adds the new status to various UI components for correct display and coloring, and includes translations for the new status in French and English. The agent state logic is also updated to correctly track pause/training time and send status changes to the backend.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -124,9 +124,15 @@
       "onPause": "On Pause",
       "ringing": "Ringing",
       "disconnected": "Disconnected",
-      "onHold": "On Hold"
+      "onHold": "On Hold",
+      "training": "Training",
+      "available": "Available"
     },
-    "callNumber": "Call {phoneName}"
+    "callNumber": "Call {phoneName}",
+    "statusManager": {
+      "title": "My Status",
+      "settings": "Edit Profile"
+    }
   },
   "userManager": {
     "title": "Users",
