feat: Add training and connected time metrics
Adds new fields `totalTrainingTime` and `totalConnectedTime` to agent state types. Updates agent status tracking to accurately increment these timers. Also introduces a fix for the campaign save endpoint to prevent "413 Payload Too Large" errors by excluding the contacts array.

--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -115,6 +115,8 @@
     "callsHandled": "Appels Traités",
     "pauseCount": "Nb Pauses",
     "totalPauseTime": "Temps Total en Pause",
+    "totalTrainingTime": "Temps Total en Formation",
+    "totalConnectedTime": "Temps Total Connecté",
     "pause": "Pause",
     "ready": "Prêt",
     "statuses": {
