--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -115,6 +115,8 @@
     "callsHandled": "Calls Handled",
     "pauseCount": "Pause Count",
     "totalPauseTime": "Total Pause Time",
+    "totalTrainingTime": "Total Training Time",
+    "totalConnectedTime": "Total Connected Time",
     "pause": "Pause",
     "ready": "Ready",
     "statuses": {
