feat: Add training count KPI
Adds a new KPI to track the number of times an agent enters the "Formation" status. This includes updating the agent state type, the initial state, and the reducer logic to increment the count when an agent transitions to training. Localization files are also updated to include the new KPI string.

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -116,6 +116,7 @@
     "pauseCount": "Pause Count",
     "totalPauseTime": "Total Pause Time",
     "totalTrainingTime": "Total Training Time",
+    "trainingCount": "Training Count",
     "totalConnectedTime": "Total Connected Time",
     "pause": "Pause",
     "ready": "Ready",
