--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -19,7 +19,10 @@
     "active": "Active",
     "inactive": "Inactive",
     "search": "Search...",
-    "all": "All"
+    "all": "All",
+    "none": "None",
+    "previous": "Previous",
+    "next": "Next"
   },
   "alerts": {
     "appDataLoadError": "Could not load application data.",
@@ -158,8 +161,11 @@
         "groups": "Assigned Groups",
         "campaigns": "Assigned Campaigns"
       },
+      "firstName": "First Name",
+      "lastName": "Last Name",
       "loginId": "Login ID / Extension",
       "loginIdHelp": "Must be a unique number of 4 to 6 digits.",
+      "email": "Email",
       "mobileNumber": "Mobile Number (for \"Connect to Phone\")",
       "useMobileAsStation": "Use mobile as workstation",
       "useMobileAsStationHelp": "If active, calls will be sent to this mobile number.",
@@ -183,9 +189,9 @@
       "lastAdmin": "Cannot delete the last administrator."
     }
   },
-    "groupManager": {
+  "groupManager": {
     "modal": {
-        "noAgents": "No active agents available."
+      "noAgents": "No active agents available."
     }
   },
   "outboundCampaignsManager": {
@@ -209,6 +215,7 @@
       "notReadyTooltip": "Missing required fields",
       "tabs": {
         "general": "General",
+        "planning": "Planning",
         "quotas": "Quotas",
         "filters": "Inclusion/Exclusion"
       },
@@ -216,6 +223,9 @@
       "noScript": "No script",
       "qualifGroup": "Qualification Group",
       "dialingMode": "Dialing Mode",
+      "predictive": "Predictive",
+      "progressive": "Progressive",
+      "manual": "Manual",
       "callerId": "Caller ID",
       "wrapUpTime": "Wrap-up Time (seconds)",
       "wrapUpTimeHelp": "Max duration for an agent in 'Wrap-up' state (max 120s).",
@@ -223,6 +233,29 @@
       "groups": "Groups",
       "individualAgents": "Individual Agents",
       "activeCampaign": "Active Campaign",
+      "weekdays": {
+        "monday": "Monday",
+        "tuesday": "Tuesday",
+        "wednesday": "Wednesday",
+        "thursday": "Thursday",
+        "friday": "Friday",
+        "saturday": "Saturday",
+        "sunday": "Sunday"
+      },
+      "activityDays": "Activity Days",
+      "timeRange": "Time Range",
+      "startTime": "Start Time",
+      "endTime": "End Time",
+      "operators": {
+        "equals": "equals",
+        "startsWith": "starts with",
+        "contains": "contains",
+        "isNotEmpty": "is not empty"
+      },
+      "value": "Value",
+      "limit": "Limit",
+      "include": "Include",
+      "exclude": "Exclude",
       "addQuotaRule": "Add quota rule",
       "addFilterRule": "Add filter rule"
     }
@@ -285,6 +318,214 @@
         "contact": "Message for {agentName}:"
       },
       "noAgents": "No agents connected at the moment."
+    }
+  },
+  "agentStatuses": {
+    "EnAttente": "Connected",
+    "EnAppel": "On Call",
+    "EnPostAppel": "Wrap-up",
+    "EnPause": "On Pause",
+    "Ringing": "Ringing",
+    "Déconnecté": "Disconnected",
+    "Miseenattente": "On Hold",
+    "Formation": "Training"
+  },
+  "campaignDetail": {
+    "backToCampaigns": "Back to campaigns",
+    "associatedScript": "Associated script: {scriptName}",
+    "tabs": {
+      "contacts": "Contacts ({count})",
+      "dashboard": "Dashboard",
+      "settings": "Settings"
+    },
+    "contacts": {
+      "searchPlaceholder": "Search for a contact...",
+      "deleteSelection": "Delete selection ({count})",
+      "headers": {
+        "lastName": "LAST NAME",
+        "firstName": "FIRST NAME",
+        "phone": "PHONE",
+        "postalCode": "POSTAL CODE",
+        "status": "STATUS",
+        "lastQualif": "Last Qualification",
+        "lastNote": "Last Note"
+      },
+      "noContacts": "No contacts found.",
+      "pagination": "Page {currentPage} of {totalPages}"
+    },
+    "dashboard": {
+      "kpis": {
+        "completionRate": "Completion Rate",
+        "contactRate": "Contact Rate",
+        "conversionRate": "Conversion Rate",
+        "aht": "AHT"
+      },
+      "fileProgress": {
+        "title": "File Progression",
+        "processed": "Processed:",
+        "remaining": "Remaining:"
+      },
+      "quota": {
+        "title": "Quotas Tracking",
+        "ruleStartsWith": "Quota: {field} starts with \"{value}\"",
+        "ruleEquals": "Quota: {field} equals \"{value}\"",
+        "achieved": "Achieved:"
+      },
+      "charts": {
+        "qualifDistributionTitle": "Qualifications Distribution",
+        "successByHourTitle": "Success Hours (Conversions)",
+        "conversionsLabel": "Conversions"
+      },
+      "tables": {
+        "qualifPerfTitle": "Performance by Qualification",
+        "agentPerfTitle": "Performance by Agent",
+        "headers": {
+          "qualification": "QUALIFICATION",
+          "processedRecords": "PROCESSED RECORDS",
+          "rate": "RATE",
+          "agent": "Agent",
+          "processedCalls": "Handled Calls",
+          "conversions": "Conversions"
+        }
+      }
+    },
+    "settings": {
+      "recycling": {
+        "title": "Contact Recycling",
+        "description": "Reset the status of qualified contacts to make them available again for agents.",
+        "headers": {
+          "qualification": "Qualification",
+          "processedRecords": "Processed Records",
+          "action": "Action"
+        },
+        "recycleButton": "Recycle"
+      }
+    }
+  },
+  "qualifications": {
+    "types": {
+      "positive": "Positives",
+      "neutral": "Neutrals",
+      "negative": "Negatives"
+    }
+  },
+  "contactHistory": {
+    "title": "Contact History",
+    "loading": "Loading history...",
+    "kpis": {
+      "totalCalls": "Total Calls",
+      "talkTime": "Talk Time",
+      "uniqueAgents": "Unique Agents",
+      "positiveQuals": "Positive Quals"
+    },
+    "timelineTitle": "Interaction Timeline",
+    "callBy": "Call by {agentName}",
+    "noteBy": "Note by {agentName}",
+    "duration": "Duration:",
+    "qualification": "Qualification:",
+    "noHistory": "No interaction history for this contact."
+  },
+  "reporting": {
+    "exportPdf": "Export to PDF",
+    "filters": {
+      "dateRange": "Preset Period",
+      "from": "From",
+      "to": "To",
+      "campaign": "Campaign",
+      "agent": "Agent",
+      "dateRanges": {
+        "last7days": "Last 7 days",
+        "last30days": "Last 30 days",
+        "thisMonth": "This month"
+      },
+      "allCampaigns": "All campaigns",
+      "allAgents": "All agents"
+    },
+    "kpis": {
+      "processedCalls": "Handled Calls",
+      "totalTalkTime": "Total Talk Time",
+      "avgCallDuration": "Average Call Duration",
+      "successRate": "Success Rate",
+      "occupancyRate": "Occupancy Rate (Simulated)",
+      "activeAgents": "Active Agents",
+      "totalLoginTime": "Total Login Time",
+      "avgAdherence": "Average Adherence"
+    },
+    "tabs": {
+      "charts": "Charts",
+      "timesheet": "Timesheet",
+      "campaign": "By Campaign",
+      "agent": "By Agent",
+      "history": "Call History"
+    },
+    "charts": {
+      "dailyVolumeTitle": "Daily call volume",
+      "callCountLabel": "Number of calls",
+      "callsByCampaignTitle": "Call distribution by campaign",
+      "successByAgentTitle": "Success rate by agent",
+      "successRateLabel": "Success Rate (%)",
+      "adherenceByAgentTitle": "Average schedule adherence",
+      "avgAdherenceLabel": "Average Adherence (min)"
+    },
+    "tables": {
+      "campaignPerf": {
+        "title": "Performance by Campaign",
+        "headers": {
+          "campaign": "Campaign",
+          "calls": "Calls",
+          "totalDuration": "Total Duration",
+          "avgDuration": "Average Duration",
+          "successRate": "Success Rate"
+        }
+      },
+      "agentPerf": {
+        "titleCalls": "Performance by Agent (Calls)",
+        "titleTimesheet": "Performance by Agent (Timesheet)",
+        "headers": {
+          "agent": "Agent",
+          "calls": "Calls",
+          "totalDuration": "Total Duration",
+          "avgDuration": "Average Duration",
+          "successRate": "Success Rate",
+          "daysWorked": "Days Worked",
+          "totalLoginDuration": "Total Login Duration",
+          "avgAdherence": "Average Adherence"
+        }
+      },
+      "timesheet": {
+        "title": "Presence Log (Login/Logout)",
+        "headers": {
+          "date": "Date",
+          "agent": "Agent",
+          "firstLogin": "1st Login",
+          "lastLogout": "Last Logout",
+          "totalDuration": "Total Duration",
+          "adherence": "Adherence"
+        }
+      },
+      "callHistory": {
+        "title": "Call History",
+        "headers": {
+          "dateTime": "Date & Time",
+          "agent": "Agent",
+          "campaign": "Campaign",
+          "number": "Number",
+          "duration": "Duration",
+          "qualification": "Qualification"
+        }
+      }
+    },
+    "noCallData": "No call data for the selected filters.",
+    "noSessionData": "No session data for the selected filters.",
+    "pdf": {
+      "title": "Detailed Analytics Report",
+      "period": "Period from {startDate} to {endDate} - Generated on {today}",
+      "kpiTitle": "Key Performance Indicators (KPIs)",
+      "callKpis": "Call Indicators",
+      "value": "Value",
+      "timesheetKpis": "Timesheet Indicators",
+      "detailedAnalysis": "Detailed Analyses",
+      "detailedLogs": "Detailed Logs"
     }
   },
   "systemSettings": {
